<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ticket"
        android:title="@string/title_events"
        />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/camera"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/bell"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

</menu>